RESOLVED FIXED100078
[EFL][WK2] Crash when passing NULL instead of ewk_view instance
https://bugs.webkit.org/show_bug.cgi?id=100078
Summary [EFL][WK2] Crash when passing NULL instead of ewk_view instance
Ryuan Choi
Reported 2012-10-22 23:16:40 PDT
Although it is abnormal to pass null as first argument of ewk_view_XXX(), I think that the crash is not acceptable because WebKit/efl has macro to check the type of smart object and return from code safely.
Attachments
Patch (5.42 KB, patch)
2012-10-23 20:51 PDT, Ryuan Choi
no flags
Patch (5.48 KB, patch)
2012-10-23 20:55 PDT, Ryuan Choi
no flags
Patch (4.21 KB, patch)
2012-10-24 04:31 PDT, Ryuan Choi
no flags
Ryuan Choi
Comment 1 2012-10-23 20:51:14 PDT
Ryuan Choi
Comment 2 2012-10-23 20:55:08 PDT
Raphael Kubo da Costa (:rakuco)
Comment 3 2012-10-24 03:41:28 PDT
Comment on attachment 170305 [details] Patch I'd say just return earlier in the macro if ewkView is 0. Plus it's better to create a new test "section" for this.
Ryuan Choi
Comment 4 2012-10-24 04:31:35 PDT
Ryuan Choi
Comment 5 2012-10-24 04:34:13 PDT
(In reply to comment #3) > (From update of attachment 170305 [details]) > I'd say just return earlier in the macro if ewkView is 0. Plus it's better to create a new test "section" for this. Thanks, I added break to exit from this macro and created new test.
Chris Dumez
Comment 6 2012-10-24 04:34:35 PDT
BTW, we are starting to Ewk_View refactoring to C++ via Bug 100226 so this code is going to change a lot over the next couple of days.
Gyuyoung Kim
Comment 7 2012-10-24 04:42:51 PDT
Comment on attachment 170360 [details] Patch It looks those patches don't touch this section yet. I think this patch can be landed first.
Ryuan Choi
Comment 8 2012-10-24 04:57:59 PDT
Note You need to log in before you can comment on or make changes to this bug.