[EFL][WK2] Crash when passing NULL instead of ewk_view instance https://bugs.webkit.org/show_bug.cgi?id=100078

Reviewed by Gyuyoung Kim.

Although applications should pass valid ewk_view to call ewk_view_XXX,
ewk_view_XXX should not be crashed.

* UIProcess/API/efl/ewk_view.cpp:
Checked null and early exited from EWK_VIEW_TYPE_CHECK if error occured.
* UIProcess/API/efl/tests/test_ewk2_view.cpp: Added test case.
(TEST_F):

Canonical link: https://commits.webkit.org/118251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@132336 268f45cc-cd09-0410-ab3c-d52691b4dbfc